.opsera-hcp-0208/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcp-0208
spec:
  selector:
    app: hcp-0208
  ports:
    - port: 80
      targetPort: 8080
      name: http
